# TronicPay

./: .gitignore  db.sqlite3  docker-compose.yml  manage.py  readme.md  requirements.txt
TronicPay/: asgi.py  (+1 more)
server/: Dockerfile  package_dist_upgrade  package_install  pyproject.toml
server/TronicPay/: settings.py  urls.py  wsgi.py
server/api/: schema.py
server/landlords/: admin.py
server/landlords/templates/: my_tenants.html  new-tenant.html  view-unit.html
server/static/assets/js/: vertical-menu.js
server/static/assets/js/chart/chartist/: chartist.js
server/static/assets/js/chart/flot-chart/: jquery.flot.js
server/static/assets/js/notify/: notify-script.js
server/static/assets/pug/components/: header.pug
server/static/assets/scss/pages/: _social-app.scss
server/static/scss/layout/: _rtl.scss
server/static/scss/pages/: _task.scss
server/static/scss/themes/: _responsive.scss
server/static/scss/utils/: _variables.scss
server/templates/: base.html  create-service-request.html  footer.html  header.html  index.html  recurring-payment.html  service-request.html  sidebar.html
server/tenant/: forms.py  models.py  views.py
server/tenant/migrations/: 0001_initial.py  0002_initial.py
server/tenant/tests/: bankAccountsSerializer_test.py  invoiceSerializer_test.py  invoice_test.py  serviceRequestsSerializer_test.py
server/users/: common.py  decorators.py  forms.py  models.py  types.py  urls.py
server/users/migrations/: 0001_initial.py
server/users/templates/users/: edit-profile.html  login.html
server/users/tests/: profile_test.py
(+66 files in other folders)
